--- a/style2.css
+++ b/style2.css
@@ -8,9 +8,11 @@ html, body {
   }
   
   .select {
-      height: 25px;
+    height: 22px;
   }
   
   input {
       margin: 15px;
+      padding: 15px 15px 15px 15px;
+      border-radius: 35px;
   }
